src/test/deca/context/valid/obj/declmethod/test_overide_type.deca
// Description:
//    declaration d'une methode renvoyant un type incorrect
//
// Resultats:
//   Override reussi
//
// Historique:
//    cree le 01/01/2024

class A{
    boolean m(){
    }
   }
class B extends A {
    boolean m(){}
}
