src/test/deca/context/invalid/obj/declmethod/test_method_return_wrong_type.deca
// Description:
//    declaration d'une methode renvoyant un type incorrect
//
// Resultats:
//   Override impossible, verifiez le type que renvoie votre fonction
// 
// Historique:
//    cree le 01/01/2024

class A{
    int m(){
        boolean b = true;
        return b;
    }
    int m(){
        return 1;
    }
}
